# switchbot-cli-tool

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  device_aliases.json  device_aliases.sample.json
src/: config.rs  lib.rs  main.rs
src/application/: control_device.rs  export_devices.rs
src/application/adapter/alias/: alias_resolver.rs
src/application/dto/: device_dto.rs  device_response_dto.rs
src/application/services/: control_device.rs  export_devices.rs
src/domain/models/: command.rs  device.rs
src/domain/models/entities/: device.rs
src/domain/models/value_objects/: command.rs  device_id.rs
src/domain/repositories/: device_repository.rs  device_repository_interface.rs
src/infrastructure/api/: switchbot_api.rs
src/infrastructure/api/switchbot_api/: dto.rs
src/infrastructure/io/: device_file_writer.rs  json_alias_loader.rs
src/presentation/cli/: args.rs  dispatch.rs  dispatcher.rs
