[package]
name = "switchbot-cli-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
rand = "0.7"
